# structure_grabber

./: CMakeLists.txt  README.md  oni2_grabber.cpp  oni2_grabber.h  structure_colored_depth_image_viewer.cpp  structure_depth_image_viewer.cpp  structure_grabber.cpp  structure_grabber.h  structure_point_cloud_viewer.cpp
